src/parser.c
#include "parser.h"
#include <stdio.h>
#include <ctype.h>
#include <string.h>
#include <stdlib.h>
#define DEBUG 0
#include "util.h"
#include "sema.h"

#define SRC_FILE    curr_tok->src_file
#define SRC_LINE    curr_tok->src_line
#define SRC_COLUMN  curr_tok->src_column

static TokenNode *curr_tok;
unsigned number_of_ast_nodes;


typedef enum {
    ABSTRACT_DECLARATOR,
    CONCRETE_DECLARATOR,
    EITHER_DECLARATOR
} DeclaratorCategory;

TypeExp *concrete_declarator(void/*int install_id, TypeExp *decl_specs*/);
// TypeExp *abstract_declarator(void);
TypeExp *declarator(DeclaratorCategory dc/*, int install_id, TypeExp *decl_specs*/);
TypeExp *direct_declarator(DeclaratorCategory dc/*, int install_id, TypeExp *decl_specs*/);


/*
 * Recursive parsing functions.
 */
ExternDecl *translation_unit(void);
ExternDecl *external_declaration(void);
FuncDef *function_definition(TypeExp *decl_specs, TypeExp *header);
Declaration *declaration(TypeExp *decl_specs, TypeExp *first_declarator);
TypeExp *declaration_specifiers(int type_spec_seen);
TypeExp *init_declarator_list(TypeExp *decl_specs, TypeExp *first_declarator);
TypeExp *init_declarator(TypeExp *decl_specs, TypeExp *first_declarator);
TypeExp *storage_class_specifier(void);
TypeExp *type_specifier(void);
TypeExp *struct_or_union_specifier(void);
TypeExp *struct_or_union(void);
DeclList *struct_declaration_list(void);
Declaration *struct_declaration(void);
TypeExp *specifier_qualifier_list(int type_spec_seen);
TypeExp *struct_declarator_list(void);
TypeExp *struct_declarator(void);
TypeExp *enum_specifier(void);
TypeExp *enumerator_list(void);
TypeExp *enumerator(void);
TypeExp *enumeration_constant(void);
TypeExp *type_qualifier(void);
// TypeExp *declarator(int install_id, Token tok);
// TypeExp *direct_declarator(int install_id, Token tok);
TypeExp *direct_declarator_postfix(void);
TypeExp *pointer(void);
TypeExp *type_qualifier_list(void);
DeclList *parameter_type_list(void);
DeclList *parameter_list(void);
Declaration *parameter_declaration(void);
// void identifier_list(void);
Declaration *type_name(void);
TypeExp *abstract_declarator(void);
TypeExp *direct_abstract_declarator(void);
TypeExp *direct_abstract_declarator_postfix(void);
TypeExp *typedef_name(void);
ExecNode *initializer(void);
ExecNode *initializer_list(void);

DeclList *declaration_list(void);
ExecNode *compound_statement(int new_scope);
ExecNode *conditional_expression(void);
ExecNode *assignment_expression(void);
ExecNode *constant_expression(void);
ExecNode *expression(void);
static ExecNode *logical_OR_expression(void);
static ExecNode *logical_AND_expression(void);
static ExecNode *inclusive_OR_expression(void);
static ExecNode *exclusive_OR_expression(void);
static ExecNode *AND_expression(void);
static ExecNode *equality_expression(void);
static ExecNode *relational_expression(void);
static ExecNode *shift_expression(void);
static ExecNode *additive_expression(void);
static ExecNode *multiplicative_expression(void);
ExecNode *cast_expression(void);
ExecNode *unary_expression(void);
ExecNode *postfix_expression(void);
ExecNode *argument_expression_list(void);
ExecNode *primary_expression(void);
ExecNode *postfix(void);

/*
 * Functions that test lookahead(1).
 */
int in_first_declaration_specifiers(void);
int in_first_storage_class_specifier(void);
int in_first_type_specifier(void);
int in_first_specifier_qualifier_list(void);
int in_first_type_qualifier(void);


Token lookahead(int i)
{
    TokenNode *p;

    p = curr_tok;
    while (--i /*&& p->token!=TOK_EOF*/)
        p = p->next;
    return p->token;
}

char *get_lexeme(int i)
{
    TokenNode *p;

    p = curr_tok;
    while (--i /*&& p->token!=TOK_EOF*/)
        p = p->next;
    return p->lexeme;
}

void match(Token token)
{
    if (curr_tok->token == token)
        curr_tok = curr_tok->next;
    else
        ERROR("expecting `%s'; found `%s'", token_table[token*2+1], curr_tok->lexeme);
}

void parser(TokenNode *tokens)
{
    curr_tok = tokens;
    translation_unit();
}

int in_first_declaration_specifiers(void)
{
    if (in_first_storage_class_specifier()
    ||  in_first_type_specifier()
    ||  in_first_type_qualifier())
        return TRUE;
    return FALSE;
}

int in_first_storage_class_specifier(void)
{
    switch (lookahead(1)) {
    case TOK_TYPEDEF:
    case TOK_EXTERN:
    case TOK_STATIC:
    case TOK_AUTO:
    case TOK_REGISTER:
        return TRUE;
    default:
        return FALSE;
    }
}

int in_first_type_specifier(void)
{
    switch (lookahead(1)) {
    case TOK_VOID:
    case TOK_CHAR:
    case TOK_SHORT:
    case TOK_INT:
    case TOK_LONG:
    case TOK_SIGNED:
    case TOK_UNSIGNED:
    case TOK_STRUCT:
    case TOK_UNION:
    case TOK_ENUM:
        return TRUE;
    case TOK_ID: /*{
        Symbol *s;

        if ((s=lookup(get_lexeme(1), TRUE)) != NULL)
            if (s->tok == TOK_TYPEDEFNAME)
                return TRUE;
        return FALSE;
    }*/
        return is_typedef_name(get_lexeme(1));
    default:
        return FALSE;
    }
}

int in_first_specifier_qualifier_list(void)
{
    if (in_first_type_specifier() || in_first_type_qualifier())
        return TRUE;
    return FALSE;
}

int in_first_type_qualifier(void)
{
    if (lookahead(1)==TOK_CONST || lookahead(1)==TOK_VOLATILE)
        return TRUE;
    return FALSE;
}

// =============================================================================
// External definitions
// =============================================================================

/*
 * translation_unit = external_declaration { external_declaration } EOF
 */
ExternDecl *translation_unit(void)
{
    ExternDecl *n, *temp;

    n = temp = external_declaration();
    while (lookahead(1) != TOK_EOF) {
        temp->sibling = external_declaration();
        temp = temp->sibling;
    }
    match(TOK_EOF);

    return n;
}

/*
 * Search `typedef' between
 * the declaration specifiers.
 */
int search_typedef(TypeExp *t)
{
    for (; t != NULL; t = t->child)
        if (t->op == TOK_TYPEDEF)
            return TRUE;
    return FALSE;
}

/*
 * external_declaration = function_definition |
 *                        declaration
 */
ExternDecl *external_declaration(void)
{
    /*
    if (?)
        function_definition();
    else if (?)
        declaration();
    else
        // error
    */
    // TokenNode *temp;

    // temp = curr_tok; /* save */
    // declaration_specifiers();
    // if (lookahead(1) != TOK_SEMICOLON)
        // declarator();
    // if (lookahead(1) == TOK_LBRACE) {
        // curr_tok = temp; /* restore */
        // function_definition();
    // } else {
        // curr_tok = temp; /* restore */
        // declaration();
    // }
    ExternDecl *e;
    TypeExp *p, *q;

    q = NULL;
    e = malloc(sizeof(ExternDecl));
    e->sibling = NULL;

    p = declaration_specifiers(FALSE);
    analyze_decl_specs(p);
    if (lookahead(1) != TOK_SEMICOLON)
        q = concrete_declarator(/*TRUE, p*/);

    if (lookahead(1) == TOK_LBRACE) {
        e->kind = FUNCTION_DEFINITION;
        e->ed.f = function_definition(p, q);
    } else {
        e->kind = DECLARATION;
        e->ed.d = declaration(p, q);
    }

    return e;
}

/*
 * function_definition = declaration_specifiers declarator compound_statement
 */
FuncDef *function_definition(TypeExp *decl_specs, TypeExp *header)
{
    FuncDef *f;

    f = malloc(sizeof(FuncDef));
    f->decl_specs = decl_specs;
    f->header = header;
    analyze_function_definition(f);
    // restore_scope(); /* restore parameters' scope */  <= unnecessary

    f->body = compound_statement(FALSE);
    pop_scope();

    return f;
}

// =============================================================================
// Declarations
// =============================================================================

/*
 * declaration = declaration_specifiers [ init_declarator_list ] ";"
 */
Declaration *declaration(TypeExp *decl_specs, TypeExp *first_declarator)
{
    Declaration *d;

    d = malloc(sizeof(Declaration));
    d->idl = NULL;
    if (decl_specs != NULL) { /* declaration() was called from external_declaration() */
        d->decl_specs = decl_specs;
    } else {
        d->decl_specs = declaration_specifiers(FALSE);
        analyze_decl_specs(d->decl_specs);
    }

    if (first_declarator!=NULL || lookahead(1)!=TOK_SEMICOLON)
        d->idl = init_declarator_list(d->decl_specs, first_declarator);
    /* else
        check for empty declaration
    */

    match(TOK_SEMICOLON);

    printf("%s\n", stringify_type_exp(d));

    return d;
}

/*
 * declaration_specifiers = storage_class_specifier [ declaration_specifiers ] |
 *                          type_specifier [ declaration_specifiers ] |
 *                          type_qualifier [ declaration_specifiers ]
 */
TypeExp *declaration_specifiers(int type_spec_seen)
{
    TypeExp *n;

    if (in_first_storage_class_specifier())
        n = storage_class_specifier();
    else if (in_first_type_specifier())
        n = type_specifier(), type_spec_seen = TRUE;
    else if (in_first_type_qualifier())
        n = type_qualifier();
    else
        ERROR("expecting declaration-specifier");

    /*
     * static const type_t; // null declaration
     *                 ^
     *             typedef name
     *
     * static const int type_t; // `int' disables typedef names
     *                    ^
     *                identifier
     *
     *   If a typedef name is used as a declarator, the
     * declaration-specifiers of the declaration must contain
     * a type-specifier.
     */
    if (in_first_declaration_specifiers() && (lookahead(1)!=TOK_ID || !type_spec_seen))
        n->child = declaration_specifiers(type_spec_seen);

    return n;
}

/*
 * init_declarator_list =  init_declarator { "," init_declarator }
 */
TypeExp *init_declarator_list(TypeExp *decl_specs, TypeExp *first_declarator)
{
    TypeExp *n, *temp;

    n = temp = init_declarator(decl_specs, first_declarator);
    while (lookahead(1) == TOK_COMMA) {
        match(TOK_COMMA);
        temp->sibling = init_declarator(decl_specs, NULL);
        temp = temp->sibling;
    }

    return n;
}

/*
 * init_declarator = declarator [ "=" initializer ]
 */
TypeExp *init_declarator(TypeExp *decl_specs, TypeExp *first_declarator)
{
    TypeExp *n;

    if (first_declarator == NULL)
        n = concrete_declarator(/*TRUE, decl_specs*/);
    else
        n = first_declarator;

    // install(decl_specs, n);
    analyze_declarator(decl_specs, n);

    if (lookahead(1) == TOK_ASSIGN) {
        match(TOK_ASSIGN);
        n->attr.e = initializer();
    }

    analyze_init_declarator(decl_specs, n, FALSE);

    return n;
}

TypeExp *new_type_exp_node(void)
{
    TypeExp *new_node;

    new_node = calloc(1, sizeof(TypeExp));
    new_node->info = curr_tok;
    ++number_of_ast_nodes;

    return new_node;
}

/*
 * storage_class_specifier = "typedef" |
 *                           "extern" |
 *                           "static" |
 *                           "auto" |
 *                           "register"
 */
TypeExp *storage_class_specifier(void)
{
    TypeExp *s;

    s = new_type_exp_node();
    s->op = lookahead(1);

    switch (lookahead(1)) {
    case TOK_TYPEDEF:
        match(TOK_TYPEDEF);
        break;
    case TOK_EXTERN:
        match(TOK_EXTERN);
        break;
    case TOK_STATIC:
        match(TOK_STATIC);
        break;
    case TOK_AUTO:
        match(TOK_AUTO);
        break;
    case TOK_REGISTER:
        match(TOK_REGISTER);
        break;
    default: /* shouldn't be reachable */
        ERROR("parser bug: storage_class_specifier()");
        break;
    }

    return s;
}

/*
 * type_specifier = "void" |
 *                  "char" |
 *                  "short" |
 *                  "int" |
 *                  "long" |
 *                  "float" |
 *                  "double" |
 *                  "signed" |
 *                  "unsigned" |
 *                  struct_or_union_specifier |
 *                  enum_specifier |
 *                  typedef_name
 */
TypeExp *type_specifier(void)
{
    TypeExp *n;

    n = new_type_exp_node();
    n->op = lookahead(1);

    switch (lookahead(1)) {
    case TOK_VOID:
        match(TOK_VOID);
        break;
    case TOK_CHAR:
        match(TOK_CHAR);
        break;
    case TOK_SHORT:
        match(TOK_SHORT);
        break;
    case TOK_INT:
        match(TOK_INT);
        break;
    case TOK_LONG:
        match(TOK_LONG);
        break;
    case TOK_SIGNED:
        match(TOK_SIGNED);
        break;
    case TOK_UNSIGNED:
        match(TOK_UNSIGNED);
        break;
    case TOK_STRUCT:
    case TOK_UNION:
        free(n);
        n = struct_or_union_specifier();
        break;
    case TOK_ENUM:
        free(n);
        n = enum_specifier();
        break;
    case TOK_ID:
        /*
         * assume in_first_type_specifier() said
         * lookahead(1) is a typedef-name.
         */
        free(n);
        n = typedef_name();
        break;
    default: /* shouldn't be reachable */
        ERROR("parser bug: type_specifier()");
        break;
    }

    return n;
}

/*
 * struct_or_union_specifier = struct_or_union [ identifier ] "{" struct_declaration_list "}" |
 *                             struct_or_union identifier
 */
TypeExp *struct_or_union_specifier(void)
{
    TypeExp *n;

    n = struct_or_union();
    if (lookahead(1) == TOK_ID) {
        TypeTag *cur, *all;

        n->str = get_lexeme(1);

        cur = lookup_tag(n->str, FALSE);
        all = lookup_tag(n->str, TRUE);
        if (all != NULL) {
            /*
             * A declaration of the identifier as a tag
             * is visible in this or an enclosing scope.
             */
            if (cur==NULL && (lookahead(2)==TOK_SEMICOLON||lookahead(2)==TOK_LBRACE)) {
                /*
                 * A declaration of the identifier as a tag is not visible in the current
                 * scope, and the declaration is of the form
                 *      struct-or-union identifier ";"
                 * or
                 *      struct-or-union identifier "{" struct-declaration-list "}"
                 */
                install_tag(n); /* new incomplete type */
            } else {
                if (n->op != all->type->op)
                    ERROR("use of `%s' with tag type that does not match previous declaration", n->str);
                n->str = all->type->str; /* this allows to do type compatibility through pointers comparison */
            }
        } else {
            install_tag(n); /* new incomplete type */
        }
        match(TOK_ID);
        if (lookahead(1) == TOK_LBRACE) {
            if (cur != NULL) {
                if (cur->type->attr.dl != NULL)
                    ERROR("redefinition of `%s %s'", token_table[n->op*2+1], n->str);
            }
            match(TOK_LBRACE);
            n->attr.dl = struct_declaration_list();
            match(TOK_RBRACE); /* the type is complete now */
            if (cur!=NULL && cur->type!=n)
                cur->type = n; /* update the previous incomplete declaration */
        }
    } else if (lookahead(1) == TOK_LBRACE) {
        static int anon_counter = 0;
        char *anon_tag;

        anon_tag = malloc(32);
        sprintf(anon_tag, "<anonymous_%d>", anon_counter++);
        n->str = anon_tag;

        match(TOK_LBRACE);
        n->attr.dl = struct_declaration_list();
        match(TOK_RBRACE);
    } else {
        ERROR("expecting identifier or struct-declaration-list");
    }

    return n;
}

/*
 * struct_or_union = "struct" | "union"
 */
TypeExp *struct_or_union(void)
{
    TypeExp *n;

    n = new_type_exp_node();
    n->op = lookahead(1);

    if (lookahead(1) == TOK_STRUCT)
        match(TOK_STRUCT);
    else if (lookahead(1) == TOK_UNION)
        match(TOK_UNION);
    else
        ERROR("parser bug: struct_or_union()");

    return n;
}

/*
 * struct_declaration_list = struct_declaration { struct_declaration }
 */
DeclList *struct_declaration_list(void)
{
    DeclList *n, *temp;

    n = temp = malloc(sizeof(DeclList));
    n->decl = struct_declaration();
    n->next = NULL;
    while (in_first_specifier_qualifier_list()) {
        temp->next = malloc(sizeof(DeclList));
        temp = temp->next;
        temp->decl = struct_declaration();
        temp->next = NULL;
    }

    return n;
}

/*
 * struct_declaration = specifier_qualifier_list struct_declarator_list ";"
 */
Declaration *struct_declaration(void)
{
    Declaration *n;

    n = malloc(sizeof(Declaration));

    n->decl_specs = specifier_qualifier_list(FALSE);
    analyze_decl_specs(n->decl_specs);
    n->idl = struct_declarator_list();
    match(TOK_SEMICOLON);

    return n;
}

/*
 * specifier_qualifier_list = ( type_specifier | type_qualifier ) [ specifier_qualifier_list ]
 */
TypeExp *specifier_qualifier_list(int type_spec_seen)
{
    TypeExp *n;

    if (in_first_type_specifier())
        n = type_specifier() , type_spec_seen = TRUE;
    else if (in_first_type_qualifier())
        n = type_qualifier();
    else
        ERROR("expecting type specifier or qualifier");

    if (in_first_specifier_qualifier_list() && (lookahead(1)!=TOK_ID || !type_spec_seen))
        n->child = specifier_qualifier_list(type_spec_seen);

    return n;
}

/*
 * struct_declarator_list = struct_declarator { "," struct_declarator }
 */
TypeExp *struct_declarator_list(void)
{
    TypeExp *n, *temp;

    n = temp = struct_declarator();
    while (lookahead(1) == TOK_COMMA) {
        match(TOK_COMMA);
        temp->sibling = struct_declarator();
        temp = temp->sibling;
    }

    return n;
}

/*
 * struct_declarator = declarator |
 *                     [ declarator ] ":" constant_expression
 */
TypeExp *struct_declarator(void)
{
    TypeExp *n;

    /*if (lookahead(1) == TOK_COLON) {
        match(TOK_COLON);
        constant_expression();
    } else {*/
        n = concrete_declarator(/*FALSE, 0*/);
        /*if (lookahead(1) == TOK_COLON) {
            match(TOK_COLON);
            constant_expression();
        }
    }*/

    return n;
}

/*
 * enum_specifier = "enum" [ identifier ] "{" enumerator_list "}" |
 *                  "enum" identifier
 */
TypeExp *enum_specifier(void)
{
    /*
     * Note: Incomplete enums are not standard.
     */
    TypeExp *n;

    n = new_type_exp_node();
    n->op = lookahead(1);

    match(TOK_ENUM);
    if (lookahead(1) == TOK_ID) {
        TypeTag *cur, *all;

        n->str = get_lexeme(1);

        cur = lookup_tag(n->str, FALSE);
        all = lookup_tag(n->str, TRUE);
        if (all != NULL) {
            /*
             * A declaration of the identifier as a tag
             * is visible in this or an enclosing scope.
             */
            if (cur==NULL && (lookahead(2)==TOK_SEMICOLON||lookahead(2)==TOK_LBRACE)) {
                /*
                 * A declaration of the identifier as a tag is not visible in the current
                 * scope, and the declaration is of the form
                 *      enum identifier ";"
                 * or
                 *      enum identifier "{" enumerator-list "}"
                 */
                install_tag(n); /* new incomplete type */
            } else {
                if (n->op != all->type->op)
                    ERROR("use of `%s' with tag type that does not match previous declaration", n->str);
                n->str = all->type->str;
            }
        } else {
            install_tag(n); /* new incomplete type */
        }
        match(TOK_ID);
        if (lookahead(1) == TOK_LBRACE) {
            if (cur != NULL) {
                if (cur->type->attr.el != NULL)
                    ERROR("redefinition of `enum %s'", n->str);
            }
            match(TOK_LBRACE);
            n->attr.el = enumerator_list();
            match(TOK_RBRACE);
            if (cur!=NULL && cur->type!=n)
                cur->type = n;

        }
    } else if (lookahead(1) == TOK_LBRACE) {
        static int anon_counter = 0;
        char *anon_tag;

        anon_tag = malloc(32);
        sprintf(anon_tag, "<anonymous_%d>", anon_counter++);
        n->str = anon_tag;

        match(TOK_LBRACE);
        n->attr.el = enumerator_list();
        match(TOK_RBRACE);
    } else {
        ERROR("expecting identifier or enumerator-list");
    }

    return n;
}

/*
 * enumerator_list = enumerator { "," enumerator }
 */
TypeExp *enumerator_list(void)
{
    TypeExp *n, *temp;

    n = temp = enumerator();
    while (lookahead(1) == TOK_COMMA) {
        match(TOK_COMMA);
        temp->sibling = enumerator();
        temp = temp->sibling;
    }

    return n;
}

/*
 * enumerator = enumeration_constant [ "=" constant_expression ]
 */
TypeExp *enumerator(void)
{
    TypeExp *n;

    n = enumeration_constant();
    if (lookahead(1) == TOK_ASSIGN) {
        match(TOK_ASSIGN);
        n->attr.e = constant_expression();
    }
    analyze_enumerator(n);

    return n;
}

/*
 * enumeration_constant = identifier
 */
TypeExp *enumeration_constant(void)
{
    TypeExp *n;

    n = new_type_exp_node();
    n->str = get_lexeme(1);
    // install(get_lexeme(1), TOK_ID);

    match(TOK_ID);

    return n;
}

/*
 * type_qualifier = "const" | "volatile"
 */
TypeExp *type_qualifier(void)
{
    TypeExp *n;

    n = new_type_exp_node();
    n->op = lookahead(1);

    if (lookahead(1) == TOK_CONST)
        match(TOK_CONST);
    else if (lookahead(1) == TOK_VOLATILE)
        match(TOK_VOLATILE);
    else
        ERROR("parser bug: type_qualifier()");

    return n;
}

TypeExp *concrete_declarator(void/*int install_id, TypeExp *decl_specs*/)
{
    return declarator(CONCRETE_DECLARATOR/*, install_id, decl_specs*/);
}

TypeExp *abstract_declarator(void)
{
    return declarator(ABSTRACT_DECLARATOR/*, 0, 0*/);
}

/*
 * declarator = [ pointer ] direct_declarator
 */
TypeExp *declarator(DeclaratorCategory dc/*, int install_id, TypeExp *decl_specs*/)
{
    /*TypeExp *n, *temp;

    if (lookahead(1) == TOK_STAR) {
        n = temp = pointer();
        while (temp->child != NULL)
            temp = temp->child;
        temp->child = direct_declarator(dc, install_id, tok);
    } else {
        n = direct_declarator(dc, install_id, tok);
    }*/
    TypeExp *n;

    if (lookahead(1) == TOK_STAR) {
        TypeExp *p, *temp;

        p = pointer();

        n = temp = direct_declarator(dc/*, install_id, decl_specs*/);
        if (temp != NULL) {
            while (temp->child != NULL)
                temp = temp->child;
            temp->child = p;
        } else {
            n = p;
        }
    } else {
        n = direct_declarator(dc/*, install_id, decl_specs*/);
    }

    return n;
}

/*
 * direct_declarator = [ identifier | "(" declarator ")" ] { direct_declarator_postfix }
 */
TypeExp *direct_declarator(DeclaratorCategory dc/*, int install_id, TypeExp *decl_specs*/)
{
    TypeExp *n, *temp;

    n = temp = NULL;

    if (lookahead(1) == TOK_ID) {
        if (dc == ABSTRACT_DECLARATOR)
            ERROR("identifier not allowed in abstract-declarator");
        n = temp = new_type_exp_node();
        n->op = lookahead(1);
        n->str = get_lexeme(1);
        /*if (install_id)
            install(decl_specs, n);*/
        match(TOK_ID);
    } else if (lookahead(1)==TOK_LPAREN
    && (lookahead(2)==TOK_LPAREN
    || lookahead(2)==TOK_LBRACKET
    || lookahead(2)==TOK_STAR
    || lookahead(2)==TOK_ID && (dc==CONCRETE_DECLARATOR||/*dc==ABSTRACT_DECLARATOR&&*/!is_typedef_name(get_lexeme(2))))) {
        match(TOK_LPAREN);
        n = temp = declarator(dc/*, install_id, decl_specs*/);
        match(TOK_RPAREN);
    }

    if (n==NULL && dc==CONCRETE_DECLARATOR)
        ERROR("missing identifier in concrete-declarator");

    /*while (lookahead(1)==TOK_LBRACKET || lookahead(1)==TOK_LPAREN) {
        n = direct_declarator_postfix();
        n->child = temp;
        temp = n;
    }*/
    if (lookahead(1)==TOK_LBRACKET || lookahead(1)==TOK_LPAREN) {
        if (temp == NULL) {
            n = temp = direct_declarator_postfix();
            while (lookahead(1)==TOK_LBRACKET || lookahead(1)==TOK_LPAREN) {
                temp->child = direct_declarator_postfix();
                temp = temp->child;
            }
        } else {
            while (temp->child != NULL)
                temp = temp->child;
            do {
                temp->child = direct_declarator_postfix();
                temp = temp->child;
            } while (lookahead(1)==TOK_LBRACKET || lookahead(1)==TOK_LPAREN);
        }
    }

    return n;
}

/*
 * direct_declarator_postfix = "[" [ constant_expression ] "]" |
 *                             "(" parameter_type_list ")" |
 *                             "(" [ identifier_list ] ")"
 */
TypeExp *direct_declarator_postfix(void)
{
    TypeExp *n;

    n = new_type_exp_node();
    // n->op = lookahead(1);

    if (lookahead(1) == TOK_LBRACKET) {
        n->op = TOK_SUBSCRIPT;
        match(TOK_LBRACKET);
        if (lookahead(1) != TOK_RBRACKET)
            n->attr.e = constant_expression();
        match(TOK_RBRACKET);
    } else if (lookahead(1) == TOK_LPAREN) {
        n->op = TOK_FUNCTION;
        match(TOK_LPAREN);
        /*if (lookahead(1) != TOK_RPAREN) {
            if (lookahead(1) == TOK_ID)
                identifier_list(); // old-style declarator
            else // parameter_type_list or error*/
                n->attr.dl = parameter_type_list();
        /*}*/
        match(TOK_RPAREN);
    } else {
        ERROR("parser bug: direct_declarator_postfix()");
    }

    return n;
}

/*
 * pointer = "*" [ type_qualifier_list ] [ pointer ]
 */
TypeExp *pointer(void)
{
    /*TypeExp *n, *temp;

    n = temp = new_type_exp_node();
    n->op = lookahead(1);

    match(TOK_STAR);
    if (in_first_type_qualifier())
        n->child = type_qualifier_list();

    if (lookahead(1) == TOK_STAR) {
        while (temp->child != NULL)
            temp = temp->child;
        temp->child = pointer();
    }*/
    TypeExp *n;

    n = new_type_exp_node();
    n->op = lookahead(1);

    match(TOK_STAR);
    if (in_first_type_qualifier())
        n->attr.el = type_qualifier_list();

    if (lookahead(1) == TOK_STAR) {
        TypeExp *p, *temp;

        p = temp = pointer();
        while (temp->child != NULL)
            temp = temp->child;
        temp->child = n;
        n = p;
    }

    return n;
}

/*
 * type_qualifier_list = type_qualifier { type_qualifier }
 */
TypeExp *type_qualifier_list(void)
{
    TypeExp *n, *temp;

    // n = temp = type_qualifier();
    n = type_qualifier();
    while (in_first_type_qualifier()) {
        // temp->child = type_qualifier();
        // temp = temp->child;
        temp = type_qualifier();
        if (temp->op != n->op)
            n->op = TOK_CONST_VOLATILE;
        free(temp);
    }

    return n;
}

/*
 * parameter_type_list = parameter_list [ "," "..." ]
 */
DeclList *parameter_type_list(void)
{
    DeclList *n, *temp;

    push_scope();
    n = temp = parameter_list();
    pop_scope(); /* restored if function definition */
    if (lookahead(1) == TOK_COMMA) {
        match(TOK_COMMA);
        match(TOK_ELLIPSIS);
        /*
         * Add a node at the end of the parameter list
         * that has TOK_ELLIPSIS as its operator.
         */
        while (temp->next != NULL)
            temp = temp->next;
        temp->next = malloc(sizeof(DeclList));
        temp = temp->next;
        temp->decl = malloc(sizeof(Declaration));
        temp->decl->idl = new_type_exp_node();
        temp->decl->idl->op = TOK_ELLIPSIS;
        temp->decl->decl_specs = NULL;
    }

    return n;
}

/*
 * parameter_list = parameter_declaration { "," parameter_declaration }
 */
DeclList *parameter_list(void)
{
    DeclList *n, *temp;

    n = temp = malloc(sizeof(DeclList));
    n->next = NULL;
